project(ToyServer)
cmake_minimum_required(VERSION 3.0)
set(CMAKE_CXX_STANDARD 14)
find_package(Threads)
message("kk${CMAKE_SOURCE_DIR}")
# find_package(MySQL REQUIRED)
# file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp)
aux_source_directory(src SOURCES)
add_subdirectory(test)
add_executable(toyserver main.cpp ${SOURCES})
target_link_libraries(toyserver Threads::Threads)