project(ToyServer)
cmake_minimum_required(VERSION 3.0)
set(CMAKE_CXX_STANDARD 17)
# set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fdiagnostics-color=auto")
find_package(Threads)
list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR})
message("kk${CMAKE_SOURCE_DIR}")
message("${CMAKE_MODULE_PATH}")

find_package(MySQL)
include_directories(${MYSQL_INCLUDE_DIR})
# find_package(MySQL REQUIRED)
# file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp)
aux_source_directory(src SOURCES)
add_subdirectory(test)
add_executable(toyserver main.cpp ${SOURCES})
target_link_libraries(toyserver Threads::Threads ${MYSQL_LIB})